--- a/config/config.yml
+++ b/config/config.yml
@@ -6,10 +6,10 @@ paths:
   secrets_config: config/secrets.yml
   logs_config: config/log_config.yml
 harassment:
-  target_guild_id: 1150153532020883568
+  target_guild_id: 1136872624023150692
   target_user_id: 748558292162314292
   event_timer: 30
-  random_messages: true
+  random_messages: false
   timeout_time_lower: 10
   timeout_time_upper: 20
   mute_time_lower: 10
